--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -3,19 +3,19 @@
 <head>
 <!-- Document information -->
 <meta charset="UTF - 8"
-<title week 3 </title>
+<title Assignment 1 </title>
 </head>
 </body>
  <! -- Document Content -- >
  </Header>
-  </h1> this is a header </h1>
+  </h1> Lane Cassidy </h1>
   </header>
   </main>
   </h2> a section of </strong> the page </strong></h2>
   <p> words will be <em> here</em></p>
   <p> more words </p>
   <hr>
-  <blockquote insert quote <cite> the quote </cite><blockquote>
+  <blockquote insert quote <cite> H.O.P.E Hold On Pain Ends </cite><blockquote>
   </main>
   <footer>
 
