--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -11,8 +11,8 @@
   </h1> Lane Cassidy </h1>
   </header>
   </main>
-  </h2> a section of </strong> the page </strong></h2>
-  <p> words will be <em> here</em></p>
+
+  <p> I wanted to use the assignment as a way of saying I prefer the name Lane. <em> here</em></p>
   <p> more words </p>
   <hr>
   <blockquote insert quote <cite> H.O.P.E Hold On Pain Ends </cite><blockquote>
