continuing the assignment

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -8,12 +8,13 @@
 </body>
  <! -- Document Content -- >
  </Header>
-  </h1> Lane Cassidy </h1>
+  </h1> </strong> Cassidy </h1>
   </header>
   </main>
 
-  <p> I wanted to use the assignment as a way of saying I prefer the name Lane. <em> here</em></p>
-  <p> more words </p>
+ <p> About Me: 
+  <p> I wanted to use the assignment as a way of saying I prefer the name Lane. <em> 
+  <p> 
   <hr>
   <blockquote insert quote <cite> H.O.P.E Hold On Pain Ends </cite><blockquote>
   </main>
