--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -8,7 +8,7 @@
 </body>
  <! -- Document Content -- >
  </Header>
-  </h1> </strong> Cassidy </h1>
+  </h1> <strong> Lane Cassidy </strong> </h1>
   </header>
   </main>
 
