--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -14,10 +14,10 @@
 
 
 <p> About Me: 
-<p> I wanted to use the assignment as a way of saying I prefer the name Lane. <em> 
-<p> Originally I wanted to go into Pre-animation and illustration but the course merged into something new <em>
-<p> So I went with my other choice which happened to be this program. I was very nervous at first, but after these past weeks it has been alot easier. <em>
-<p> Although I want to do more artistic things at school, my job goal is to eventually work with animals as they are my biggest passion.<em>
+<p> I wanted to use the assignment as a way of saying I prefer the name Lane. </p> 
+<p> Originally I wanted to go into Pre-animation and illustration but the course merged into something new </p>
+<p> So I went with my other choice which happened to be this program. I was very nervous at first, but after these past weeks it has been alot easier. </p>
+<p> Although I want to do more artistic things at school, my job goal is to eventually work with animals as they are my biggest passion. </p>
   <hr>
   <blockquote insert quote <cite> H.O.P.E Hold On Pain Ends </cite><blockquote>
   </main>
