--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -15,10 +15,12 @@
 
 <p> About Me: 
 <p> You may have noticed that the name for the header is different, that is because I prefer the name Lane and would like to use it in class if possible. </p> 
-<p> Originally I wanted to go into Pre-animation and illustration but the course merged into something new </p>
-<p> So I went with my other choice which happened to be this program. I was very nervous at first, but after these past weeks it has been alot easier. </p>
-<p> Although I want to do more artistic things at school, my job goal is to eventually work with animals as they are my biggest passion. </p>
-  <hr>
+<p> Originally I wanted to go into Pre-animation and illustration but the course merged into something new, </p>
+<p> so I went with my other choice which happened to be this program. I was very nervous at first, as I felt that the only thing I knew how to do was basic photoshop. </p>
+<p>Once classes actually started though I felt different, I was excited for all the new knowledge I am obtaining.</p>
+<p> Suprisingly enough despite only wanting to do more artistic things with my education, my career goal is to eventually work with animals as they are my biggest passion. </p>
+  
+<hr>
   <blockquote insert quote <cite> H.O.P.E Hold On Pain Ends </cite><blockquote>
   </main>
   <footer>
