--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -19,9 +19,13 @@
 <p> so I went with my other choice which happened to be this program. I was very nervous at first, as I felt that the only thing I knew how to do was basic photoshop. </p>
 <p>Once classes actually started though I felt different, I was excited for all the new knowledge I am obtaining.</p>
 <p> Suprisingly enough despite only wanting to do more artistic things with my education, my career goal is to eventually work with animals as they are my biggest passion. </p>
-  
+
+<p>The quote I chose is byfar my favourite quote, I have loved it for the past seven years.</p>
+<P>It has been something ive always wanted tattooed so for my 19th birthday I'd like to get it.</p>
+<p>I have always found quotes and poetry intreseting, with only a few words it can evoke so many emotions.</p>
+
 <hr>
-  <blockquote insert quote <cite> H.O.P.E Hold On Pain Ends </cite><blockquote>
+  <blockquote H.O.P.E Hold On Pain Ends <cite> Shyla Colt </cite><blockquote>
   </main>
   <footer>
 
