--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -25,7 +25,7 @@
 <p>I have always found quotes and poetry intreseting, with only a few words it can evoke so many emotions.</p>
 
 <hr>
-  <blockquote H.O.P.E Hold On Pain Ends <cite> Shyla Colt </cite><blockquote>
+  <blockquote> H.O.P.E Hold On Pain Ends <cite> Shyla Colt </cite><blockquote>
   </main>
   <footer>
 
