--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -24,7 +24,8 @@
 <p>The quote I chose is by far my favourite quote, I have loved it for the past seven years.</p>
 <P>It has been something ive always wanted tattooed so for my 19th birthday I'd like to get it.</p>
 <p>I have always found quotes and poetry intreseting, with only a few words it can evoke so many emotions.</p>
-
+<p>Although coding is something I am not completely familiar with this was fun to create, I hope to only continue improving.</p>
+<p>I also wanted to thankyou at the end, as I have learned so much your teaching style and formating is so helpful, its helped me create this and I would have never know how to even use html before, so thankyou for reading and helping me create my assignment.</p>
 <hr>
   <blockquote> H.O.P.E Hold On Pain Ends <cite> Shyla Colt </cite><blockquote>
   </main>
