--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -9,7 +9,8 @@
  <! -- Document Content -- >
  </Header>
   </h1> <strong> Lane Cassidy </strong> </h1>
-  </header>
+  <a href="cass0240.github.io/html-assignment/index.html">Google</a> 
+</header>
   </main>
 
 
