--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -9,7 +9,7 @@
  <! -- Document Content -- >
  </Header>
   </h1> <strong> Lane Cassidy </strong> </h1>
-  <a href="cass0240.github.io/html-assignment/index.html">Google</a> 
+  <a href="cass0240.github.io/html-assignment/index.html"</a> 
 </header>
   </main>
 
