--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -8,9 +8,8 @@
 </body>
  <! -- Document Content -- >
  </Header>
-  </h1> <strong> Lane Cassidy </strong> </h1>
-  <a href="cass0240.github.io/html-assignment/index.html"</a> 
-</header>
+  <h1> <strong> Lane Cassidy </strong> </h1>
+  </header>
   </main>
 
 
