--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -29,7 +29,8 @@
 <hr>
   <blockquote> H.O.P.E Hold On Pain Ends <cite> Shyla Colt </cite><blockquote>
   </main>
-  <footer>
+  <footer> https://www.goodreads.com/work/quotes/47260816-hold-on-pain-ends-h-o-p-e-dueling-devils-book-6 https://imdac.github.io/mtm6130/
+
 
   </footer>
 
