--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -16,8 +16,8 @@
 <p> About Me: 
 &nbsp;
 <p> You may have noticed that the name for the header is different, that is because I prefer the name Lane and would like to use it in class if possible. </p> 
-<p> Originally I wanted to go into Pre-animation and illustration but the course merged into something new, </p>
-<p> so I went with my other choice which happened to be this program. I was very nervous at first, as I felt that the only thing I knew how to do was basic photoshop. </p>
+<p> Originally I wanted to go into Pre-animation and illustration but the course merged into something new. </p>
+<p> Thus leading me to be in this program. I was very nervous at first, as I felt that the only thing I knew how to do was basic photoshop. </p>
 <p>Once classes actually started though I felt different, I was excited for all the new knowledge I am obtaining.</p>
 <p> Suprisingly enough despite only wanting to do more artistic things with my education, my career goal is to eventually work with animals as they are my biggest passion. </p>
 &nbsp;
