--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -31,8 +31,9 @@
   </main>
   <footer> https://www.goodreads.com/work/quotes/47260816-hold-on-pain-ends-h-o-p-e-dueling-devils-book-6 https://imdac.github.io/mtm6130/
 
-
-  </footer>
+<img src="8giZH*p2"
+  
+</footer>
 
 </body>
 </html>
