--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -28,9 +28,12 @@
 <p>I also wanted to thankyou at the end, as I have learned so much your teaching style and formating is so helpful, its helped me create this and I would have never know how to even use html before, so thankyou for reading and helping me create my assignment.</p>
 <hr>
   <blockquote> H.O.P.E Hold On Pain Ends <cite> Shyla Colt </cite><blockquote>
+  https://www.goodreads.com/work/quotes/47260816-hold-on-pain-ends-h-o-p-e-dueling-devils-book-6 https://imdac.github.io/mtm6130/
   <img src="Images/Picture of me.jpg" alt="Picture of me"
-  </main>
-  <footer> https://www.goodreads.com/work/quotes/47260816-hold-on-pain-ends-h-o-p-e-dueling-devils-book-6 https://imdac.github.io/mtm6130/
+ 
+
+</main>
+  <footer> 
 
 
   
