--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -29,7 +29,13 @@
 <hr>
   <blockquote> H.O.P.E Hold On Pain Ends <cite> Shyla Colt </cite><blockquote>
   <img src="Images/Picture of me.jpg" alt="Picture of me"
-  </main>
+ <p>My Hobbies: 
+  &nbsp;
+  <p>I would say that my two current hobbies are playing video games and drawing.</p>
+  <p>I play video games nearly everyday and draw every other day, I love doing both but it can get draining as I am constantly looking at screens.</p>
+
+
+</main>
   <footer> https://www.goodreads.com/work/quotes/47260816-hold-on-pain-ends-h-o-p-e-dueling-devils-book-6 https://imdac.github.io/mtm6130/
 
 
