--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -36,7 +36,8 @@
 
 
 </main>
-  <footer> https://www.goodreads.com/work/quotes/47260816-hold-on-pain-ends-h-o-p-e-dueling-devils-book-6 https://imdac.github.io/mtm6130/
+  <footer> 
+    <article>www.goodreads.com/work/quotes/47260816-hold-on-pain-ends-h-o-p-e-dueling-devils-book-6</article>
 
 
   
