--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -37,7 +37,7 @@
 
 </main>
   <footer> 
-    <article>www.goodreads.com/work/quotes/47260816-hold-on-pain-ends-h-o-p-e-dueling-devils-book-6</article>
+    <article www.goodreads.com/work/quotes/47260816-hold-on-pain-ends-h-o-p-e-dueling-devils-book-6
 
 
   
