--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -30,7 +30,7 @@
   <blockquote> H.O.P.E Hold On Pain Ends <cite> Shyla Colt </cite><blockquote>
   <img src="Images/Picture of me.jpg" alt="Picture of me"
   
-  
+  &nbsp;
   <p>I would say that my two current hobbies are playing video games and drawing.</p>
   <p>I play video games nearly everyday and draw every other day, I love doing both but it can get draining as I am constantly looking at screens.</p>
 
