--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -35,7 +35,7 @@
 <p> 
 &nbsp;
 <p>I would say that my two current hobbies are playing video games and drawing.</p>
-<p>I play video games nearly everyday and draw every other day, I love doing both but it can get draining as I am constantly looking at screens.</p>
+<p>I play video games nearly everyday and draw every other day, my favourite video game at the moment is called Ooblets and the drawing software im using is photoshop.</p>
 
 
 </main>
