--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -40,6 +40,7 @@
 <p>I would say that my two current hobbies are playing video games and drawing.</p>
 <p>I play video games nearly everyday and draw every other day, my favourite video game at the moment is called Ooblets and the drawing software im using is photoshop.</p>
 
+<li <a href="notes.html" </a> </li> 
 <form action="index.html" method="GET"
 </main>
   <footer> 
