--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -1,1 +1,8 @@
-<Header></Header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<!-- Document information -->
+<meta charset="UTF - 8"
+<title Assignment 2 </title>
+</head>
+</body>
