--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -41,7 +41,10 @@
 <p>I play video games nearly everyday and draw every other day, my favourite video game at the moment is called Ooblets and the drawing software im using is photoshop.</p>
 
 
+
+<article> &copy; Lane Cassidy </article>
 <form action="index.html" method="GET"
+
 </main>
   <footer> 
     
