--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -43,6 +43,9 @@
 
 
 <article> &copy; Lane Cassidy </article>
+<a href="#notes.html" >Navigation</a>
+<ul id="notes.html">
+
 <form action="index.html" method="GET"
 
 </main>
