--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -7,7 +7,13 @@
 </head>
 </body>
 
-<a href="#index.html" >Navigation</a>
+<! -- Document Content -- >
+ </Header>
+  <h1> <strong> HTML ive learned </strong> </h1>
+  </header>
+  </main>
+
+  <a href="#index.html" >Navigation</a>
 <ul id="index.html">
 
 
