--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -9,7 +9,7 @@
 
 <! -- Document Content -- >
  </Header>
-  <h1> <strong> HTML ive learned </strong> </h1>
+  <h1> HTML I've learned </h1>
   </header>
   </main>
   
