--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -15,9 +15,7 @@
   
   <p></p>
   
-  <a href="#index.html" >Navigation</a>
-<ul id="index.html">
-
+<a href="https://cass0240.github.io/html-assignment/index.html"Navigation </a>
 
 
 
