--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -43,8 +43,7 @@
 
 
 <article> &copy; Lane Cassidy </article>
-<a href="#notes.html" >Navigation</a>
-<ul id="notes.html">
+<a href="https://cass0240.github.io/html-assignment/notes.html#index.html"Navigation </a>
 
 <form action="index.html" method="GET"
 
