--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -43,7 +43,7 @@
 
 
 <article> &copy; Lane Cassidy </article>
-<a href="https://cass0240.github.io/html-assignment/notes.html#index.html"Navigation </a>
+<a href="https://cass0240.github.io/html-assignment/notes.html#index.html">navigation </a> 
 
 <form action="index.html" method="GET"
 
