--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -15,7 +15,7 @@
   
   <p></p>
   
-<a href= "https://cass0240.github.io/html-assignment/index.html">Navigation </a>
+  <a href="https://cass0240.github.io/html-assignment/index.html">navigation </a> 
 
 
 
