--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -15,7 +15,7 @@
   
 <a href="https://cass0240.github.io/html-assignment/index.html">navigation </a> 
 
-
+<dl> P h1 headers img src a href </dl>
 
 <footer> 
     
