--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -15,7 +15,11 @@
   
 <a href="https://cass0240.github.io/html-assignment/index.html">navigation </a> 
 
-<p><dl> P h1 headers img src a href </dl> </p>
+<dl><p> P </p>
+<p> h1</p>
+<p>Header</p>
+<p>img src</p>
+<p>a href</p> </dl>
 
 <footer> 
     
