--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -15,11 +15,7 @@
   
 <a href="https://cass0240.github.io/html-assignment/index.html">navigation </a> 
 
-<dl><p> P </p>
-<p> h1</p>
-<p>Header</p>
-<p>img src</p>
-<p>a href</p> </dl>
+<ul> p h1 Header img src a href </ul>
 
 <footer> 
     
