--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -17,6 +17,7 @@
 
 <ul> p h1 Header img src a href </ul>
 
+<p>p stands for Paragraph.  Header creates a header. img src allows you to display an image. a href allows you to add links and navigate between them thats how youre able to read this.</p>
 <footer> 
     
 
