--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -16,8 +16,9 @@
 <a href="https://cass0240.github.io/html-assignment/index.html">navigation </a> 
 
 
-<p>p stands for Paragraph.  Header creates a header. img src allows you to display an image. a href allows you to add links and navigate between them thats how youre able to read this.</p>
 <ul> p h1 Header img src a href </ul>
+
+<h1> <p>p stands for Paragraph.  Header creates a header. img src allows you to display an image. a href allows you to add links and navigate between them thats how youre able to read this.</p></h1>
 
 <footer> 
     
