--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -15,8 +15,10 @@
   
 <a href="https://cass0240.github.io/html-assignment/index.html">navigation </a> 
 
-<ul> p h1 Header img src a href </ul>
+<p>p stands for Paragraph.  Header creates a header. img src allows you to display an image. a href allows you to add links and navigate between them thats how youre able to read this.</p>
+&nbsp;
 
+<ul>p h1 header img src a href</ul>
 
 <footer> 
     
