--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -15,7 +15,8 @@
   
 <a href="https://cass0240.github.io/html-assignment/index.html">navigation </a> 
 
-<ul>p header img src a href ul</ul>
+<ul>p header img src a href ul
+</ul>
 
 
 <footer> 
