--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -15,8 +15,7 @@
   
 <a href="https://cass0240.github.io/html-assignment/index.html">navigation </a> 
 
-<p> 
-<ul> p h1 header img src a href ul </ul> </p>
+<ul> p h1 header img src a href ul </ul> 
 
 
 <footer> 
