--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -15,7 +15,8 @@
   
 <a href="https://cass0240.github.io/html-assignment/index.html">navigation </a> 
 
-<ul><dl> p h1 header img src a href </dl> </ul>
+<ul p h1 header img src a href 
+</ul>
 
 
 <footer> 
