--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -15,8 +15,8 @@
   
 <a href="https://cass0240.github.io/html-assignment/index.html">navigation </a> 
 
-<ul>p h1 header img src a href 
-
+<ul> <p> h1 header img src a href </p>
+</ul>
 
 <footer> 
 
