--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -13,12 +13,12 @@
   </header>
   </main>
   
-<a href="https://cass0240.github.io/html-assignment/index.html">navigation </a> 
+<ul>p h1 header img src a href ul </ul>
 
-<p> <ul> h1 header img src a href </ul> </p>
+
 
 <footer> 
-
+    <a href="https://cass0240.github.io/html-assignment/index.html">navigation </a> 
   
 </footer>
 
