--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -13,8 +13,7 @@
   </header>
   </main>
   
-<ul>p h1 header img src a href ul </ul>
-
+<ul> <li> p h1 header img src a href ul </li> </ul>
 
 
 <footer> 
