--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -13,7 +13,7 @@
   </header>
   </main>
   
-<ul> <li> p h1 header img src a href ul </li> </ul>
+<ul><li> p h1 header img src a href ul </ul></li>
 
 
 <footer> 
