--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -13,7 +13,16 @@
   </header>
   </main>
   
-<ul><li> p h1 header img src a href ul </ul></li>
+<ul><li> p </ul></li>
+<p> p creates paragraphs</p>
+<ul><li> header </ul></li>
+<p>header creates the header of the page</p>
+<ul><li> img src </ul></li>
+<p>img src allows you to display a photo on your page</p>
+<ul><li> a href </ul></li>
+<p>a href allows you to add links into your page thats how youre able to read this! </p>
+<ul><li> ul </ul></li>
+<p>ul is what lets you make lists and how I partially made this list</p>
 
 
 <footer> 
