--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
+"<!DOCTYPE html>"
 <html lang="en">
-<head>
 <!-- Document information -->
 <meta charset="UTF - 8"
-<title Assignment 2 </title>
+<title> Assignment 2 </title>
 </head>
 </body>
  <! -- Document Content -- >
