--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -13,15 +13,15 @@
   </header>
   </main>
   
-<ul><li> p </ul></li>
+<ul> p </ul>
 <p> p creates paragraphs</p>
-<ul><li> header </ul></li>
+<ul> header </ul>
 <p>header creates the header of the page</p>
-<ul><li> img src </ul></li>
+<ul> img src </ul>
 <p>img src allows you to display a photo on your page</p>
-<ul><li> a href </ul></li>
+<ul> a href </ul>
 <p>a href allows you to add links into your page thats how youre able to read this! </p>
-<ul><li> ul </ul></li>
+<ul> ul </ul>
 <p>ul is what lets you make lists and how I partially made this list</p>
 
 
