--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,7 +1,8 @@
-"<!DOCTYPE html>"
+<!DOCTYPE html> 
 <html lang="en">
 <!-- Document information -->
 <meta charset="UTF - 8"
+<head>
 <title> Assignment 2 </title>
 </head>
 </body>
