--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html> 
+<html>
+  <head>
 <html lang="en">
 <!-- Document information -->
-<meta charset="UTF - 8"
-<head>
+<meta charset="UTF - 8">
 <title> Assignment 2 </title>
 </head>
 </body>
