--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -6,10 +6,10 @@
 <meta charset="UTF - 8">
 <title> Assignment 2 </title>
 </head>
-</body>
+<body>
  <! -- Document Content -- >
  </Header>
-  <h1> <strong> Lane Cassidy </strong> </h1>
+ <p style="color: aquamarine;"><h1> <strong> Lane Cassidy </strong> </h1> </p>
   </header>
   </main>
 
