--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -9,7 +9,7 @@
 <body>
  <! -- Document Content -- >
  </Header>
- <p style="color: aquamarine;"><h1> <strong> Lane Cassidy </strong> </h1> </p>
+ <h1> <strong> Lane Cassidy </strong> </h1> </p>
   </header>
   </main>
 
@@ -50,8 +50,8 @@
 <form action="index.html" method="GET"
 
 </main>
-  <footer> 
-    
+<p style="color: aquamarine;"> <footer> </p>
+  
 
 
   
