--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -50,7 +50,7 @@
 <form action="index.html" method="GET"
 
 </main>
-<p style="color: aquamarine;"> <footer> </p>
+<p style="background-color: aquamarine;"> <footer> </p>
   
 
 
