--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -9,7 +9,7 @@
 <body>
  <! -- Document Content -- >
  </Header>
- <h1> <strong> Lane Cassidy </strong> </h1> </p>
+ <p style="background-color: aquamarine;">><h1> <strong> Lane Cassidy </strong> </h1> </p>
   </header>
   </main>
 
