--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -9,7 +9,7 @@
 <body>
  <! -- Document Content -- >
  </Header>
- <p style="background-color: aquamarine;">><h1> <strong> Lane Cassidy </strong> </h1> </p>
+ <h1> <p style="background-color: aquamarine;"> <strong> Lane Cassidy </strong> </p> </h1> 
   </header>
   </main>
 
