--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -9,7 +9,7 @@
 <body>
  <! -- Document Content -- >
  </Header>
- <h1> <p style="background-color: aquamarine;"> <strong> Lane Cassidy </strong> </p> </h1> 
+ <h1><strong> <p style="background-color: aquamarine;"> Lane Cassidy </p></strong></h1> 
   </header>
   </main>
 
