--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -6,10 +6,10 @@
 <meta charset="UTF - 8">
 <title> Assignment 3 </title>
 </head>
-<style font: optional; font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; aria-setsize="18 "> <body> </style> 
+<style font: optional; font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; aria-setsize="18 "> </style> <body> 
  <! -- Document Content -- >
  </Header>
- <h1><strong> <p style="background-color: aquamarine;"> Lane Cassidy </p></strong></h1> 
+ <h1><strong> <p style="background-color: aquamarine;" style="color: aliceblue;" Lane Cassidy </p></strong></h1> 
   </header>
   </main>
 
