--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -9,7 +9,7 @@
 <style font: optional; font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; aria-setsize="18 "> </style> <body> 
  <! -- Document Content -- >
  </Header>
- <h1><strong> <p style="background-color: aquamarine;">  Lane Cassidy </p> <p style="color: aliceblue;"> </p></strong></h1> 
+ <h1><strong> <p style="background-color: aquamarine;"> </p> Lane Cassidy <p style="color: aliceblue;"> </p></strong></h1> 
   </header>
   </main>
 
