--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -35,7 +35,7 @@
 
 <a href="https://cass0240.github.io/html-assignment/notes.html#index.html">navigation </a> 
 <header>
-<img src="Images/Picture of me.jpg" alt="Picture of me" title="selfie" width="600" >
+<style id="box shadow"> </style><img src="Images/Picture of me.jpg" alt="Picture of me" title="selfie" width="600" >
 </header>
 <p> 
 &nbsp;
