--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -6,7 +6,10 @@
 <meta charset="UTF - 8">
 <title> Assignment 3 </title>
 </head>
-<style font: optional; font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; aria-setsize="18 "> </style> <body> 
+ body {
+   color: aqua; 
+   font-size: 18px <body> 
+   }
  <! -- Document Content -- >
  </Header>
  <h1><strong> <p style="background-color: aquamarine;"> </p> Lane Cassidy <p style="color: aliceblue;"> </p></strong></h1> 
