--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -7,9 +7,7 @@
 <title> Assignment 3 </title>
 <link href="css/main.css" rel="stylesheet">
 </head>
- body {
-   color: aqua; 
-   font-size: 18px <body> 
+ <body> 
    }
  <! -- Document Content -- >
  </Header>
