--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -11,8 +11,10 @@
    }
  <! -- Document Content -- >
  </Header>
- <h1><strong> <p style="background-color: aquamarine;"> </p> Lane Cassidy <p style="color: aliceblue;"> </p></strong></h1> 
-  </header>
+
+ <h1><strong> <p style="background-color: aqua;"> Lane Cassidy </p> </strong></h1> 
+
+</header>
   </main>
 
 
