--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -11,7 +11,7 @@
  <! -- Document Content -- >
  </Header>
 
- <h1><strong> <p style="background-color: aqua;"> Lane Cassidy </p> </strong></h1> 
+ <h1><strong> <P style="color: azure;" style="background-color: aqua;" > Lane Cassidy </p> </strong></h1> 
 
 </header>
   </main>
