--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -11,7 +11,7 @@
  <! -- Document Content -- >
  </Header>
 
- <h1><strong> <P style="color: azure;" style="background-color: aqua;" > Lane Cassidy </p> </strong></h1> 
+ <h1> <P style="color: azure;" style="background-color: aqua;" > Lane Cassidy </p></h1> 
 
 </header>
   </main>
@@ -38,7 +38,7 @@
 
 <a href="https://cass0240.github.io/html-assignment/notes.html#index.html">navigation </a> 
 <header>
-<style id="box shadow"> </style><img src="Images/Picture of me.jpg" alt="Picture of me" title="selfie" width="600" >
+<img src="Images/Picture of me.jpg" alt="Picture of me" title="selfie" width="600" >
 </header>
 <p> 
 &nbsp;
