--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -11,7 +11,7 @@
  <! -- Document Content -- >
  </Header>
 
- <h1> <P style="color: azure;" style="background-color: aqua;" > Lane Cassidy </p></h1> 
+ <h1> <P style="background-color: aqua;" style="color: azure;"  > Lane Cassidy </p></h1> 
 
 </header>
   </main>
