--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -32,10 +32,11 @@
 <p>I also wanted to thankyou at the end, as I have learned so much your teaching style and formating is so helpful, its helped me create this and I would have never know how to even use html before, so thankyou for reading and helping me create my assignment.</p>
 <hr>
 <blockquote> H.O.P.E Hold On Pain Ends <cite> Shyla Colt</cite><blockquote> 
-<article>
+  a:link { <color:red>
+  <article>
 <a href="https://www.goodreads.com/work/quotes/47260816-hold-on-pain-ends-h-o-p-e-dueling-devils-book-6#:~:text=There's%20no%20picking%20and%20choosing,Hold%20On%2C%20Pain%20Ends%3A%20H.O.P.E.">source</a>
 </article>
-
+</color:red> }
 <a href="https://cass0240.github.io/html-assignment/notes.html#index.html">navigation </a> 
 <header>
 <img src="Images/Picture of me.jpg" alt="Picture of me" title="selfie" width="600" >
