--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -11,7 +11,7 @@
  <! -- Document Content -- >
  </Header>
 
- <h1> <P style="color: azure; background-color: aqua;"> </P> Lane Cassidy </h1> 
+ <h1> <P style="color: azure; background-color: aqua;"> </P> Lane Cassidy </h1> </style>
 
 </header>
   </main>
