--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -5,7 +5,7 @@
 <!-- Document information -->
 <meta charset="UTF - 8">
 <title> Assignment 3 </title>
-<link href="css/main.css" rel="stylesheet">
+<link href="main.css" rel="stylesheet">
 </head>
  <body> 
  <! -- Document Content -- >
@@ -34,7 +34,7 @@
 <blockquote> H.O.P.E Hold On Pain Ends <cite> Shyla Colt</cite><blockquote> 
   
 <article>
-<p style="text-decoration: none;"></p> <a href="https://www.goodreads.com/work/quotes/47260816-hold-on-pain-ends-h-o-p-e-dueling-devils-book-6#:~:text=There's%20no%20picking%20and%20choosing,Hold%20On%2C%20Pain%20Ends%3A%20H.O.P.E.">source</a> 
+<p style="text-decoration: ;"></p> <a href="https://www.goodreads.com/work/quotes/47260816-hold-on-pain-ends-h-o-p-e-dueling-devils-book-6#:~:text=There's%20no%20picking%20and%20choosing,Hold%20On%2C%20Pain%20Ends%3A%20H.O.P.E.">source</a> 
 </article>
 
 <a href="https://cass0240.github.io/html-assignment/notes.html#index.html">navigation </a> 
@@ -53,8 +53,8 @@
 
 <form action="index.html" method="GET"
 
-</main>
-<p style="background-color: aquamarine;"> <footer> </p>
+<main>
+<P style="color: azure; background-color: aqua;"> <footer> </p>
   
 
 
