--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -5,7 +5,7 @@
 <!-- Document information -->
 <meta charset="UTF - 8">
 <title> Assignment 3 </title>
-<link href="main.css" rel="stylesheet">
+<link href="css/main.css" rel="stylesheet">
 </head>
  <body> 
  <! -- Document Content -- >
