--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -5,13 +5,13 @@
 <!-- Document information -->
 <meta charset="UTF - 8">
 <title> Assignment 3 </title>
-<link href="css/main.css" rel="stylesheet">
+<link href="main.css" rel="stylesheet">
 </head>
  <body> 
  <! -- Document Content -- >
  </Header>
 
- <h1> <P style="color: azure; background-color: aqua;"> </P> Lane Cassidy </h1> 
+<h1> <P style="color: azure; background-color: aqua;"> </P> Lane Cassidy </h1> 
 
 </header>
   </main>
