--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -11,7 +11,7 @@
  <! -- Document Content -- >
  </Header>
 
-<h1> <P style="background-color: lightpink; color: azure;"> Lane Cassidy </P> </h1> 
+<h1> <P style="color: azure; background-color: lightpink;" ></P> Lane Cassidy </h1> 
 
 </header>
   </main>
