--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -3,7 +3,8 @@
 <head>
 <!-- Document information -->
 <meta charset="UTF - 8"
-<title Assignment 2 </title>
+<title Assignment 3 </title>
+<link href="main.css" rel="stylesheet">
 </head>
 </body>
 
