--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -9,9 +9,8 @@
 </head>
  <body> 
  <! -- Document Content -- >
- </Header>
-
-<h1> <P style="color: azure; background-color: lightpink;" ></P> Lane Cassidy </h1> 
+ <Header>
+ <h1> <P style="color: azure; background-color: lightpink;" ></P> Lane Cassidy </h1> 
 
 </header>
   </main>
