--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -10,7 +10,7 @@
  <body> 
  <! -- Document Content -- >
  <Header>
- <h1> <P style="color: azure; background-color: lightpink;" ></P> Lane Cassidy </h1> 
+ <h1> <P style="color: azure; background-color: lightpink;"> </P> Lane Cassidy </h1> 
 
 </header>
   </main>
@@ -53,7 +53,7 @@
 <form action="index.html" method="GET"
 
 <main>
-<P style="color: azure; background-color: aqua;"> <footer> </p>
+ <footer> 
   
 
 
