--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -9,7 +9,7 @@
 </head>
  <body> 
  <! -- Document Content -- >
- <Header>
+ </Header>
  <h1><P style="color: azure; background-color: lightpink;"></P> Lane Cassidy </h1> 
 
 </header>
