--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -10,7 +10,7 @@
  <body> 
  <! -- Document Content -- >
  </Header>
- <h1><P style="color: azure; background-color: lightpink;"> Lane Cassidy </h1></P> 
+ <h1><P style="color: azure; background-color: lightpink;"> Lane Cassidy </P></h1>
 
 </header>
   </main>
