--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -35,10 +35,11 @@
 <article>
 <a href="https://www.goodreads.com/work/quotes/47260816-hold-on-pain-ends-h-o-p-e-dueling-devils-book-6#:~:text=There's%20no%20picking%20and%20choosing,Hold%20On%2C%20Pain%20Ends%3A%20H.O.P.E.">source</a> 
 </article>
-
 <a href="https://cass0240.github.io/html-assignment/notes.html#index.html">navigation </a> 
 <header>
-<img src="Images/Picture of me.jpg" alt="Picture of me" title="selfie" width="600" >
+
+  <img src="Images/Picture of me.jpg" alt="Picture of me" title="selfie" width="600" >
+  
 </header>
 <p> 
 &nbsp;
@@ -46,6 +47,8 @@
 <p>I play video games nearly everyday and draw every other day, my favourite video game at the moment is called Ooblets and the drawing software im using is photoshop.</p>
 
 
+
+<div id="my Images"></div>
 
 <article> &copy; Lane Cassidy </article>
 
