--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -39,7 +39,8 @@
 <header> 
 
   <img src="Images/Picture of me.jpg" alt="Picture of me" title="selfie" width="600" >
-  
+<img src="Images/Picture of me.jpg"  id="Picture of me" />
+
 </header>
 
 <p>Hobbies: 
