--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -43,10 +43,10 @@
 </header>
 
 <p>Hobbies: 
-<ul>Video games</ul>
-<ul>Drawing</ul>
-<ul>Animating</ul>
-<ul>Socalizing</ul>
+<ul><li>Video games</ul></li>
+<ul><li>Drawing</ul></li>
+<ul><li>Animating</ul></li>
+<ul><li>Socalizing</ul></li>
 </p>
 
 
