--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -47,7 +47,8 @@
 <ul><li>Drawing</ul></li>
 <ul><li>Animating</ul></li>
 <ul><li>Socalizing</ul></li>
-</p>
+</p> 
+<ul style="list-style-type:square;"
 
 
 <article> &copy; Lane Cassidy </article>
