--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -8,6 +8,7 @@
 <link href="main.css" rel="stylesheet">
 </head>
  <body> 
+  <ul style="list-style-type:square"></ul>
  <! -- Document Content -- >
  </Header>
  <h1><P style="color: azure; background-color: lightpink;"> Lane Cassidy </P></h1>
