--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -8,7 +8,7 @@
 <link href="main.css" rel="stylesheet">
 </head>
  <body> 
-  <ul style="list-style-type:square"><li></ul>
+  <ul style="list-style-type:square"><li></ul> </li>
  
  <! -- Document Content -- >
  </Header>
