--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -8,7 +8,8 @@
 <link href="main.css" rel="stylesheet">
 </head>
  <body> 
-  <ul style="list-style-type:square"><li>test <li>test </ul>
+<ul list-style-type=square><li>test <li>test </ul>
+
  
  <! -- Document Content -- >
  </Header>
