--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -8,7 +8,7 @@
 <link href="main.css" rel="stylesheet">
 </head>
  <body> 
-<ul list-style-type=square><li>test <li>test </ul>
+<ul list-style-type=square><li> </li> </ul>
 
  
  <! -- Document Content -- >
