--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -8,7 +8,7 @@
 <link href="main.css" rel="stylesheet">
 </head>
  <body> 
-<ul list-style-type=square><li> </li> </ul>
+
 
  
  <! -- Document Content -- >
@@ -17,7 +17,7 @@
 
 </header>
   </main>
-
+  <ul list-style-type=square><li> </li> </ul>
 
 <p> About Me: 
 &nbsp;
@@ -45,12 +45,13 @@
 
 </header>
 
-<p>Hobbies: 
-<ul><li>Video games</ul></li>
-<ul><li>Drawing</ul></li>
-<ul><li>Animating</ul></li>
-<ul><li>Socalizing</ul></li>
-</p> 
+<p>Hobbies: </p> 
+<ul><li>Video games</li>
+<li>Drawing</li>
+<li>Animating</li>
+<li>Socalizing</li>
+</ul>
+
 
 
 
