--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -25,6 +25,8 @@
 <ul> ul </ul>
 <p>ul is what lets you make lists and how I partially made this list</p>
 
+<ul list-style-type=square><li> </li> </ul>
+
 
 <footer> 
     <a href="https://cass0240.github.io/html-assignment/index.html">navigation </a> 
