--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -14,7 +14,7 @@
   </header>
   </main>
  
-  <ul list-style-type=square><li> </li> </ul>
+  <ul list-style-type=square> </ul>
 
 <ul> p </ul> 
 <p> p creates paragraphs</p>
