--- a/midterm/index.html
+++ b/midterm/index.html
@@ -17,6 +17,13 @@
     <div class="top right">
     <div class="centered"> 
     </div>
+
+    <nav>
+    <ul> <li> HOME
+    <li> STORY
+    <li> CONTACT
+    </li> </ul>
+    </nav>
     
     <h2>Life of a Starfish </h2>
     <div class="container"> 
