--- a/midterm/index.html
+++ b/midterm/index.html
@@ -14,6 +14,7 @@
     
     <div class="container">
     <img src="images/lone-starfish-wide.jpg">
+    <div class="top right">
     </div>
     
     <h1> Lone Starfish </h1>
