--- a/midterm/index.html
+++ b/midterm/index.html
@@ -45,3 +45,11 @@
             <li>    Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.
     </li> </ul> 
     
+    <form>
+        <input type="text">
+        <input type="radio">
+        <input type="button">
+        <input type="submit">
+
+    </form>
+    
