--- a/midterm/index.html
+++ b/midterm/index.html
@@ -53,8 +53,9 @@
         <input type="text" id="lname" name="lname"> <br>
         
         
-        <input type="radio">
-        <input type="button">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
         <input type="submit">
 
     </form>
