--- a/midterm/index.html
+++ b/midterm/index.html
@@ -53,5 +53,7 @@
         <input type="text" id="lname" name="lname"> <br>
             
     <input type="checkbox">
+    <input type="checkbox">
+    <input type="checkbox">
     <input type="submit">
 </form>
