--- a/midterm/index.html
+++ b/midterm/index.html
@@ -52,8 +52,7 @@
         <label for="lname"> Last Name: </label> <br>
         <input type="text" id="lname" name="lname"> <br>
             
-    <input type="checkbox">
-    <input type="checkbox">
-    <input type="checkbox">
+    <input type="radio">
+
     <input type="submit">
 </form>
