--- a/midterm/index.html
+++ b/midterm/index.html
@@ -53,6 +53,8 @@
         <input type="text" id="lname" name="lname"> <br>
             
     <input type="radio">
+    <input type="radio">
+    <input type="radio">
 
     <input type="submit">
 </form>
