--- a/midterm/index.html
+++ b/midterm/index.html
@@ -51,10 +51,14 @@
         <input type="text" id="fname" name="fname"> <br>
         <label for="lname"> Last Name: </label> <br>
         <input type="text" id="lname" name="lname"> <br>
-            
-    <input type="radio">
-    <input type="radio">
-    <input type="radio">
-
-    <input type="submit">
+ 
+<p> would you like to visit the starfish?</p>        
+    
+<input type="radio" id="Yes" name="visit starfish" value="Yes"
+<label for="Yes"> Yes </label> <br>
+<input type="radio" id="No" name="visit starfish" value="No">
+<label for="No"> No </label> <br>
+<input type="radio" id="Maybe" name="visit starfish" value="Maybe">
+<label for="Maybe"> Maybe </label> <br>
+<input type="submit">
 </form>
