--- a/midterm/index.html
+++ b/midterm/index.html
@@ -55,10 +55,10 @@
 <p> would you like to visit the starfish?</p>        
     
 <input type="radio" id="Yes" name="visit starfish" value="Yes"
-<label for="Yes"> Yes </label> <br>
+<label for="Yes"> Yes </label> 
 <input type="radio" id="No" name="visit starfish" value="No">
-<label for="No"> No </label> <br>
+<label for="No"> No </label> 
 <input type="radio" id="Maybe" name="visit starfish" value="Maybe">
-<label for="Maybe"> Maybe </label> <br>
+<label for="Maybe"> Maybe </label> 
 <input type="submit">
 </form>
