--- a/midterm/index.html
+++ b/midterm/index.html
@@ -60,5 +60,5 @@
 <label for="No"> No </label> 
 <input type="radio" id="Maybe" name="visit starfish" value="Maybe">
 <label for="Maybe"> Maybe </label> 
-<input type="submit">
+<input type="submit"><br>
 </form>
