--- a/midterm/index.html
+++ b/midterm/index.html
@@ -52,7 +52,7 @@
         <label for="ymail"> Your Email: </label> <br>
         <input type="text" id="ymail" name="ymail"> <br>
  
-<p> would you like to visit the starfish?</p>        
+<p> Would you like to visit the starfish?</p>        
     
 <input type="radio" id="Yes" name="visit starfish" value="Yes"
 <label for="Yes"> Yes </label> 
