--- a/midterm/index.html
+++ b/midterm/index.html
@@ -60,7 +60,7 @@
 <label for="No"> No </label> 
 <input type="radio" id="Maybe" name="visit starfish" value="Maybe">
 <label for="Maybe"> Maybe </label> 
-<input type="text">
+<input type="text"> <br>
 <input type="submit"> <br>
 </form>
 
