--- a/midterm/index.html
+++ b/midterm/index.html
@@ -51,6 +51,8 @@
     <input type="text" id="yname" name="yname"> <br>
     <label for="ymail"> Your Email: </label> <br>
      <input type="text" id="ymail" name="ymail"> <br>
+     <label for="ymessage"> Your Message: </label> <br>
+     <input type="text" id="ymessage" name="ymessage"> <br>
  
 <p> Would you like to visit the starfish?</p>        
     
@@ -60,7 +62,6 @@
 <label for="No"> No </label> 
 <input type="radio" id="Maybe" name="visit starfish" value="Maybe">
 <label for="Maybe"> Maybe </label> 
-<input type="text"> <br>
 <input type="submit"> <br>
 </form>
 
