--- a/midterm/index.html
+++ b/midterm/index.html
@@ -47,12 +47,13 @@
     <input type="text" id="yname" name="yname"> <br>
     <label for="ymail"> Your Email </label> <br>
      <input type="text" id="ymail" name="ymail"> <br>
-     <form action="Your Message">
-        <label for="Ymessage"> Your Message</label>
-        <textarea id="Ymessage" name="Ymessage" rows="4" cols="50">
+     <form action="Your Message"> <br>
+     <label for="Ymessage"> Your Message</label> <br>
+    <textarea id="Ymessage" name="Ymessage" rows="4" cols="50"> <br>
+    </form>
  
 <p> Would you like to visit the starfish?</p>        
-    
+<form> 
 <input type="radio" id="Yes" name="visit starfish" value="Yes"
 <label for="Yes"> Yes </label> 
 <input type="radio" id="No" name="visit starfish" value="No">
