--- a/midterm/index.html
+++ b/midterm/index.html
@@ -48,7 +48,8 @@
     <label for="ymail"> Your Email </label> <br>
      <input type="text" id="ymail" name="ymail"> <br>
      <form action="Your Message"> <br>
-     <label for="Ymessage"> Your Message</label> <br>
+    <label for="Ymessage"> Your Message</label> <br>
+    <input type="text" id="Ymessage" name="Ymessage"> <br>
     <textarea id="Ymessage" name="Ymessage" rows="4" cols="50"> <br>
     </form>
  
