--- a/midterm/index.html
+++ b/midterm/index.html
@@ -44,7 +44,7 @@
     <form>
        
     <label for="yname"> Your Name </label> <br>
-    <input type="text" id="yname" name="yname"> <br>
+    <input type="text"> id="yname" name="yname"> <br>
     <label for="ymail"> Your Email </label> <br>
      <input type="text" id="ymail" name="ymail"> <br>
      <form action="Your Message"> <br>
