--- a/midterm/index.html
+++ b/midterm/index.html
@@ -44,10 +44,10 @@
     <form>
        
     <label for="yname"> Your Name </label> <br>
-    <input type="text"> id="yname" name="yname"> <br>
+    <input type="text" id="yname" name="yname"> <br>
     <label for="ymail"> Your Email </label> <br>
      <input type="text" id="ymail" name="ymail"> <br>
-     <form action="Your Message"> <br>
+    <form action="Your Message"> <br>
     <label for="Ymessage"> Your Message</label> <br>
     <input type="text" id="Ymessage" name="Ymessage"> <br>
     <textarea id="Ymessage" name="Ymessage" rows="4" cols="50"> <br>
