--- a/midterm/index.html
+++ b/midterm/index.html
@@ -47,20 +47,21 @@
     <input type="text" id="yname" name="yname"> <br>
     <label for="ymail"> Your Email </label> <br>
      <input type="text" id="ymail" name="ymail"> <br>
-    <form action="Your Message"> <br>
-    <label for="Ymessage"> Your Message</label> <br>
-    <input type="text" id="Ymessage" name="Ymessage"> <br>
-    <textarea id="Ymessage" name="Ymessage" rows="4" cols="50"> <br>
+    <form action="your Message"> <br>
+    <label for="ymessage"> Your Message</label> <br>
+    <input type="text" id="ymessage" name="ymessage"> <br>
+    <textarea id="ymessage" name="ymessage" rows="4" cols="50"> <br>
     </form>
  
 <p> Would you like to visit the starfish?</p>        
 <form> 
-<input type="radio" id="Yes" name="visit starfish" value="Yes"
-<label for="Yes"> Yes </label> 
-<input type="radio" id="No" name="visit starfish" value="No">
-<label for="No"> No </label> 
-<input type="radio" id="Maybe" name="visit starfish" value="Maybe">
-<label for="Maybe"> Maybe </label> 
+<input type="radio" id="yes" name="visit starfish" value="yes"
+<label for="yes"> Yes </label> 
+<input type="radio" id="No" name="visit starfish" value="no">
+<label for="no"> No </label> 
+<input type="radio" id="maybe" name="visit starfish" value="maybe">
+<label for="maybe"> Maybe </label> 
+
 <input type="submit"> <br>
 </form>
 
