--- a/midterm/index.html
+++ b/midterm/index.html
@@ -50,7 +50,7 @@
       <label for="ymessage"> Your Message</label> <br>
       <input type="text" id="ymessage" name="ymessage"> <br>
       <textarea id="ymessage" name="ymessage" rows="4" cols="50"> <br>
-      </form>
+      </textarea> </form>
    
   <p> Would you like to visit the starfish?</p>        
   <form> 
@@ -63,4 +63,3 @@
   <br>
   <input type="submit"> 
   </form>
-  
