--- a/midterm/index.html
+++ b/midterm/index.html
@@ -49,11 +49,11 @@
       <form action="your Message"> <br>
       <label for="ymessage"> Your Message</label> <br>
       <input type="text" id="ymessage" name="ymessage"> <br>
-      <textarea id="ymessage" name="ymessage" rows="4" cols="50"> <br>
-      </textarea> </form>
+      <textarea id="ymessage" name="ymessage" rows="4" cols="50"> 
+      </textarea> 
    
   <p> Would you like to visit the starfish?</p>        
-  <form> 
+  
   <input type="radio" id="yes" name="visit starfish" value="yes"
   <label for="yes"> Yes </label> 
   <input type="radio" id="No" name="visit starfish" value="no">
