--- a/midterm/index.html
+++ b/midterm/index.html
@@ -46,9 +46,8 @@
       <input type="text" id="yname" name="yname"> <br>
       <label for="ymail"> Your Email </label> <br>
        <input type="text" id="ymail" name="ymail"> <br>
-      <form action="your Message"> <br>
+      <form action="your Message"> 
       <label for="ymessage"> Your Message</label> <br>
-      <input type="text" id="ymessage" name="ymessage"> <br>
       <textarea id="ymessage" name="ymessage" rows="4" cols="50"> 
       </textarea> 
    
