--- a/midterm/index.html
+++ b/midterm/index.html
@@ -16,12 +16,13 @@
    <div><img src="images/lone-starfish-wide.jpg" ALIGN=”top”> </div>
 
    
-    <nav>
-    <ul> <li> HOME
-    <li> STORY
-    <li> CONTACT
-    </li> </ul>
-    </nav>
+   <div class="navbar">
+<a href="#home">Home</a>
+<a href="#story">Story</a>
+<a href="#contact">Contact</a>
+
+
+   </div>
     
     <h2>Life of a Starfish </h2>
     <div class="container"> 
