--- a/midterm/index.html
+++ b/midterm/index.html
@@ -16,8 +16,8 @@
    <div><img src="images/lone-starfish-wide.jpg" ALIGN=”top”> </div>
 
    
-   <div class="navbar">
-<a href="#home">Home</a>
+<div class="topnav">
+<a href="active" a href="#home">Home</a>
 <a href="#story">Story</a>
 <a href="#contact">Contact</a>
 
